--- a/index2.html
+++ b/index2.html
@@ -6,24 +6,21 @@
 </head>
 <body> 
 	<h1> Like Fanfiction? </h1>
+	
 	<p> Check out these!</p>
+	<!-- <a href="images/wattpad-review.jpg">https://www.wattpad.com/</a> -->
 	<link rel="stylesheet" type="text/css" href="https://www.wattpad.com/">
-	<img src="/C:/Users/Admin/Documents/Creative%20Computing%20Fall%202017/AShadow45.github.io/images/wattpad-review.jpg">
+		<img src="/C:/Users/Admin/Documents/Creative%20Computing%20Fall%202017/AShadow45.github.io/images/wattpad-review.jpg">
 	
 	<link rel="stylesheet" type="text/css" href="https://www.fanfiction.net/">
-	<img src="images/ffnt.jpg">
+		<img src="images/ffnt.jpg">
 
 	<link rel="stylesheet" type="text/css" href="http://archiveofourown.org/">
-	<img src="/C:/Users/Admin/Documents/Creative%20Computing%20Fall%202017/AShadow45.github.io/images/archiveofourownlogo.png">
+		<img src="/C:/Users/Admin/Documents/Creative%20Computing%20Fall%202017/AShadow45.github.io/images/archiveofourownlogo.png">
 
 	<p>These are for those with a creative mind. Do you have one?</p>
 
-	<a href=""></a>
+	<a href="https://www.wattpad.com/"></a>
   	
-  <!-- 	<!-- relative path -->
-	<img src="images/">
-	
-	<!-- //absolute path -->
-	<img src=""> -->
 </body>
 </html>
