--- a/Final/Index.html
+++ b/Final/Index.html
@@ -11,9 +11,16 @@
 
 <img src="C:/Users/anali/Documents/Creative%20Computing%20Fall%202017/AShadow45.github.io/Final/Images/Animated%20Me%20-%20fully%20merged.png" style="width: 400px; height: auto;">
 
-<p> Random Fact! 	
+<p> 
+	Random Fun Fact!
+</p>
 
+<p>
+	Did you know Pandora was the first mortal woman?
+</p>
 
+<p> 
+	Pandora was made by Zeus and was the first mortal woman according to Greek Mythology. SHe received a gift from each of the Gods to make her perfect. Zeus gave her to Epimetheus who had been warned by his brother Prometheus to not take any gifts from Zeus but he got enchanted by Pandora's beauty and accepted. He gave her a box and told her never to open it. But she couldn't resist and opened it, letting out all evil and mistrust in the world.
 </p>
 
 </body>
